--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.data.mongodb.database=customer_db
 spring.data.mongodb.port=27017
 management.endpoints.web.exposure.include = *
 management.endpoint.health.show-details=always
-#feign.circuitbreaker.enabled=true
+#feign.hystrix.enabled=true
+feign.circuitbreaker.enabled=true
+feign.client.config.account.connectTimeout=10000
+feign.client.config.account.readTimeout=10000
