--- a/communicationgateway/src/main/resources/application.properties
+++ b/communicationgateway/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.cloud.gateway.discovery.locator.enabled = true
 management.endpoints.web.exposure.include = *
 spring.cloud.gateway.routes[0].id=customer
 spring.cloud.gateway.routes[0].uri=http://localhost:8070/
-spring.cloud.gateway.routes[0].predicates[0]=Path=/CustomerCreation/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/customers/**
 spring.cloud.gateway.routes[1].id=account
 spring.cloud.gateway.routes[1].uri=http://localhost:8071/
-spring.cloud.gateway.routes[1].predicates[0]=Path=/AccountCreation/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/accounts/**
 
