--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -10,5 +10,5 @@ management.endpoints.web.exposure.include = *
 management.endpoint.health.show-details=always
 #feign.hystrix.enabled=true
 feign.circuitbreaker.enabled=true
-#feign.client.config.account.connectTimeout=20000
-#feign.client.config.account.readTimeout=20000
+feign.client.config.account.connectTimeout=20000
+feign.client.config.account.readTimeout=20000
