Demo3 first commit

--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 management.endpoints.web.exposure.include = *
+logging.file.name=D:/Spring/MicroService Demo1/account/src/logs/account_service.log
