--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -12,4 +12,7 @@ management.endpoint.health.show-details=always
 feign.circuitbreaker.enabled=true
 feign.client.config.account.connectTimeout=30000
 feign.client.config.account.readTimeout=30000
+feign.client.config.account.errorDecoder=com.mavericsystems.customer.config.MyErrorDecoder
+feign.client.config.account.retryer=com.mavericsystems.customer.config.FeignClientRetryer
+logging.file.name=D:/Spring/MicroService Demo1/customer/src/logs/customer_service.log
 
